kubernetes/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        - image: ssilvestro/dashboard:1.0.0
          name: dashboard
          ports:
            - containerPort: 4200
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: dashboard
  name: dashboard-internal
spec:
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  selector:
    io.kompose.service: dashboard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: dashboard
  name: dashboard-external
spec:
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      nodePort: 30047
  type: NodePort
  selector:
    io.kompose.service: dashboard
