kubernetes/eureka-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-server
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: discovery-server
    spec:
      containers:
        - image: ssilvestro/discovery-server
          name: discovery-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: discovery-server-external
  name: discovery-server-external
spec:
  ports:
    - name: external-port
      protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30044
  type: NodePort

  selector:
    io.kompose.service: discovery-server

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: discovery-server-internal
  name: discovery-server-internal
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8761
      targetPort: 8761

  selector:
    io.kompose.service: discovery-server
