kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - image: ssilvestro/api-gateway
          name: gateway
          ports:
            - containerPort: 9191
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gateway
  name: gateway-internal
spec:
  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191
  selector:
    io.kompose.service: gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gateway
  name: gateway-external
spec:
  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191
      nodePort: 30046
  type: NodePort
  selector:
    io.kompose.service: gateway
