kubernetes/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server-external
spec:
  type: NodePort
  selector:
    app: discovery-server
  ports:
    - name: http
      port: 8761
      targetPort: 8761
      nodePort: 30061
