kubernetes/position-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: position-service
  name: position-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: position-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: position-service
    spec:
      containers:
        - image: ssilvestro/position-service
          name: position-service
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: position-service-internal
  name: position-service-internal
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081

  selector:
    io.kompose.service: position-service
