kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: dashboard-ingress

spec:
  rules:
    - host: api-service
      http:
        paths:
          - path: /api-service
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
